--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-qunit": "nyc qunit test/test-qunit.js",
+    "test": "npm run test-qunit",
+    "build": " npm test && node build.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "jsdom": "^26.0.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-firefox-launcher": "^2.1.3",
     "karma-qunit": "^4.2.1",
     "karma-requirejs": "^1.1.0",
-    "qunit": "^2.23.1"
+    "nyc": "^17.1.0",
+    "qunit": "^2.23.1",
+    "sinon": "^19.0.2"
+  },
+  "dependencies": {
+    "devextreme": "^24.2.3",
+    "jquery": "^3.7.1"
   }
 }
